--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sonar.sources>src/main</sonar.sources>
-		<sonar.tests>src/test</sonar.tests>
-		<runSuite>**/*Suite.class</runSuite>
-		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath>
-		<sonar.language>java</sonar.language>
+<!-- 		<sonar.sources>src/main</sonar.sources> -->
+<!-- 		<sonar.tests>src/test</sonar.tests> -->
+<!-- 		<runSuite>**/*Suite.class</runSuite> -->
+<!-- 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin> -->
+<!-- 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis> -->
+<!-- 		<sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath> -->
+<!-- 		<sonar.language>java</sonar.language> -->
 	</properties>
 
 
@@ -101,25 +101,25 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
-				<executions>
-					<execution>
-						<id>default-prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>default-report</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.5</version>
+            <executions>
+                <execution>
+                    <id>default-prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>default-report</id>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 			<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
