--- a/pom.xml
+++ b/pom.xml
@@ -132,8 +132,15 @@
 					<excludeDevtools>false</excludeDevtools>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
 
 		</plugins>
+		
 	</build>
 
 </project>
